updated Dragonfly code to use selenium v3.8.1
-changes to Base64 to use java internal 1.8 (working)
-changed Locatable due to changes in v3.8.1 (works in chrome, not
working in frames for IE stille debugging)